// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulPageContainer > Snapshot tests > basic page container snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r1"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r1 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r1 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container with action button snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r4"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r4 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r4 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
        <div
          class="delightful-card-extra"
        >
          <button>
            Action button
          </button>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container with tab snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card delightful-card-contain-tabs acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r5"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r5 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r5 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
      </div>
      <div
        class="delightful-tabs delightful-tabs-top delightful-tabs-large delightful-card-head-tabs css-dev-only-do-not-override-yotw4n css-var-r5 delightful-tabs-css-var"
      >
        <div
          aria-orientation="horizontal"
          class="delightful-tabs-nav"
          role="tablist"
        >
          <div
            class="delightful-tabs-nav-wrap"
          >
            <div
              class="delightful-tabs-nav-list"
              style="transform: translate(0px, 0px);"
            >
              <div
                class="delightful-tabs-tab delightful-tabs-tab-active"
                data-node-key="tab1"
              >
                <div
                  aria-controls="rc-tabs-test-panel-tab1"
                  aria-selected="true"
                  class="delightful-tabs-tab-btn"
                  id="rc-tabs-test-tab-tab1"
                  role="tab"
                  tabindex="0"
                >
                  Tag 1
                </div>
              </div>
              <div
                class="delightful-tabs-tab"
                data-node-key="tab2"
              >
                <div
                  aria-controls="rc-tabs-test-panel-tab2"
                  aria-selected="false"
                  class="delightful-tabs-tab-btn"
                  id="rc-tabs-test-tab-tab2"
                  role="tab"
                  tabindex="-1"
                >
                  Tag 2
                </div>
              </div>
              <div
                class="delightful-tabs-ink-bar delightful-tabs-ink-bar-animated"
              />
            </div>
          </div>
          <div
            class="delightful-tabs-nav-operations delightful-tabs-nav-operations-hidden"
          >
            <button
              aria-controls="rc-tabs-test-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              class="delightful-tabs-nav-more"
              id="rc-tabs-test-more"
              style="visibility: hidden; order: 1;"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="anticon anticon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="delightful-tabs-content-holder"
        >
          <div
            class="delightful-tabs-content delightful-tabs-content-top"
          >
            <div
              aria-hidden="false"
              aria-labelledby="rc-tabs-test-tab-tab1"
              class="delightful-tabs-tabpane delightful-tabs-tabpane-active"
              id="rc-tabs-test-panel-tab1"
              role="tabpanel"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container with custom class snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo custom-page css-dev-only-do-not-override-yotw4n css-var-r2"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r2 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r2 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container with custom attributes snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r3"
    data-testid="page-container"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r3 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r3 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container with custom style snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r7"
    style="background-color: rgb(240, 240, 240);"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r7 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r7 delightful-flex-align-center"
              style="gap: 8px;"
            >
              Page title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulPageContainer > Snapshot tests > page container without title snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-card acss-1t0i3xo css-dev-only-do-not-override-yotw4n css-var-r8"
  >
    <div
      class="delightful-card-head acss-3n96tu"
    >
      <div
        class="delightful-card-head-wrapper"
      >
        <div
          class="delightful-card-head-title"
        >
          <div
            class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r8 delightful-flex-align-center delightful-flex-justify-space-between"
          >
            <div
              class="delightful-flex css-dev-only-do-not-override-yotw4n css-var-r8 delightful-flex-align-center"
              style="gap: 8px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="delightful-card-body acss-jnieq4"
    >
      Page content
    </div>
  </div>
</DocumentFragment>
`;
